# locus-model

./: .env.vault  .gitignore  LICENSE  Makefile  README.md  create_table.sql  pyproject.toml  requirements.txt  requirements_dev.txt  train_conf.toml  train_conf_sample.toml
docs/: mkdocs.yaml
docs/markdown/: structure.md
docs/source/: index.md
locus/: __init__.py  predict_model.py  train_model.py
locus-model/: __init__.py
locus/api/: main.py  requirements.txt
locus/data/: LDoGI.py  QuadTree.py  generate_quadtree.py  make_dataset.py
notebooks/: .ruff.toml  dKenez-0.0-Polars_tests.ipynb  dKenez-0.0-Seaborn_tests.ipynb  dKenez-0.1-Polars_reading_writing.ipynb  dKenez-0.1.0-Polars_tests.ipynb  dKenez-0.1.1-Polars_reading_writing.ipynb  dKenez-1.0-Data_exploration.ipynb  dKenez-1.1-Data_to_parquet.ipynb  dKenez-2.0-Data_to_parquet.ipynb  dKenez-2.1-Data_from_parquet.ipynb  dKenez-3.0-Mapping.ipynb  dKenez-3.1-Generate_quad_tree.ipynb  dKenez-3.2-Find_enclosing_cell.ipynb  dKenez-3.3-Data_heatmap.ipynb  dKenez-4.0-Data_loader_sandbox.ipynb  dKenez-4.0.1-Data_loader_sandbox_db.ipynb  dKenez-4.1-Database_tests.ipynb  dKenez-4.2-Database_dataset.ipynb  dKenez-4.3-Copy_to_HPC.ipynb  dKenez-5.0-Batched_data_loader.ipynb  dKenez-5.1-Logging_setup.ipynb  dKenez-5.2-MSE_and_MSSE.ipynb  dKenez-6.0-Prediction.ipynb  dKenez-7.0-parquet_data_fetching_graphs copy.ipynb  dKenez-7.1-training_results.ipynb  heatmap_data.npy  results.json  results.txt  results_datafetch_db.json  results_db.json  t.py  test.html  test.txt  test_class.txt
tests/: __init__.py  test_raw_data.py
(+35 files in other folders)
